--- a/src/components/app-header/index.module.css
+++ b/src/components/app-header/index.module.css
@@ -133,3 +133,134 @@
 
 
 
+
+.menu-option {
+    display: flex;
+}
+
+.sidebar-overlay {
+    position: fixed;
+    top: 83px;
+    width: 70%;
+    height: calc(100dvh - 83px);
+    z-index: 1001;
+    overflow: hidden;
+    right: 0;
+    transform: translateX(100%);
+    opacity: 0;
+    animation: slideInSidebar 0.4s ease forwards;
+
+    .sidebar-content {
+        height: 100%;
+        width: 100%;
+        background-color: var(--card-bg);
+        padding: 2rem;
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        animation: fadeInContent 0.4s ease 0.1s forwards;
+
+        ul {
+            margin: 0;
+            padding: 0;
+
+            li {
+                display: block;
+                opacity: 0;
+                transform: translateY(10px);
+                animation: fadeUpItem 0.3s ease forwards;
+            }
+
+            li:nth-child(1) {
+                animation-delay: 0.2s;
+            }
+
+            li:nth-child(2) {
+                animation-delay: 0.3s;
+            }
+
+            li:nth-child(3) {
+                animation-delay: 0.4s;
+            }
+
+            li:nth-child(4) {
+                animation-delay: 0.5s;
+            }
+
+            li:nth-child(5) {
+                animation-delay: 0.6s;
+            }
+
+            .sidebar-item {
+                display: flex;
+                justify-content: flex-start;
+                align-items: center;
+                gap: 0.5rem;
+                padding: 0.5rem;
+                border: 1px solid var(--text-muted);
+                border-radius: 0.5rem;
+
+                .icon-class {
+                    color: var(--text-light);
+                }
+
+                h6 {
+                    color: var(--text-light);
+                    margin: 0;
+                    font-size: 0.875rem;
+                    font-weight: 500;
+                }
+            }
+
+            .active-sidebar-item {
+                border-radius: 0.5rem;
+                background-color: var(--theme-color);
+
+                .icon-class {
+                    color: var(--text-light);
+                }
+
+                h6 {
+                    color: var(--text-light);
+                    margin: 0;
+                    font-size: 0.875rem;
+                    font-weight: 500;
+                }
+            }
+        }
+    }
+}
+
+@keyframes slideInSidebar {
+    to {
+        transform: translateX(0%);
+        opacity: 1;
+    }
+}
+
+@keyframes fadeInContent {
+    from {
+        opacity: 0;
+        transform: scale(0.98);
+    }
+
+    to {
+        opacity: 1;
+        transform: scale(1);
+    }
+}
+
+@keyframes fadeUpItem {
+    to {
+        opacity: 1;
+        transform: translateY(0px);
+    }
+}
+
+
+@media (max-width: 768px) {
+    .menu-option {
+        display: none;
+    }
+
+}
