--- a/src/components/leadership-content/index.module.css
+++ b/src/components/leadership-content/index.module.css
@@ -168,3 +168,27 @@
 .dot.active {
     transform: scale(1.3);
 }
+
+@media (max-width: 768px) {
+    .slide{
+        padding: 1rem 1.25rem;
+    }
+    .icon{
+        width:  3rem;
+        height: 3rem;
+    }
+    .card-content{
+        width: calc(100% - 3rem - 0.5rem);
+        h2 {
+            font-size: 1.5rem;
+        }
+    
+        h4 {
+            font-size: 1rem;
+        }
+    }
+    .description{
+        min-height: 250px;
+    }
+
+}
