--- a/src/components/scroll-to-top/index.module.css
+++ b/src/components/scroll-to-top/index.module.css
@@ -15,9 +15,10 @@
     justify-content: center;
     z-index: 1000;
     transition: transform 0.3s ease, opacity 0.3s ease;
-    svg{
+
+    svg {
         position: relative;
-        bottom: 2px;
+        top: 2px;
     }
 
     &:hover {
@@ -38,4 +39,9 @@
     to {
         transform: translateY(-5px);
     }
+}
+
+.fade-in {
+    opacity: 1;
+    transform: translateY(0);
 }
