--- a/src/index.css
+++ b/src/index.css
@@ -66,11 +66,11 @@ body[data-theme="light"] {
 }
 
 .social-icon {
-  height: 2.25rem;
-  width: 2.25rem;
+  height: 2.75rem;
+  width: 2.75rem;
   border-radius: 50%;
   background-color: transparent;
-  transform: scale(0.9);
+  transform: scale(0.85);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -79,7 +79,7 @@ body[data-theme="light"] {
 }
 
 .social-icon svg {
-  font-size: 1.25rem;
+  font-size: 2rem;
   color: var(--text-light);
   transition: color 0.3s ease;
   pointer-events: none;
@@ -405,4 +405,13 @@ button.more-about-us:hover {
   display: -webkit-box;
   -webkit-line-clamp: 4;
   -webkit-box-orient: vertical;
+}
+
+@media (max-width: 768px) {
+  :root {
+    .spacing-class {
+      padding: 2rem 0.75rem;
+    }
+  }
+
 }
