--- a/src/components/app-header/index.module.css
+++ b/src/components/app-header/index.module.css
@@ -145,7 +145,7 @@
     height: calc(100dvh - 83px);
     z-index: 1001;
     overflow: hidden;
-    right: 0;
+    left: 0;
     transform: translateX(100%);
     opacity: 0;
     animation: slideInSidebar 0.4s ease forwards;
