--- a/src/components/leadership-content/index.module.css
+++ b/src/components/leadership-content/index.module.css
@@ -1,4 +1,4 @@
-.carousel {
+.carousel-container {
     position: relative;
     text-align: center;
     max-width: 900px;
@@ -13,6 +13,8 @@
     padding: 2rem 3rem;
     border-radius: 1rem;
     box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
+    width: 90%;
+    margin: 0 auto;
 }
 
 
@@ -103,27 +105,18 @@
 
 
 .left {
-    left: -1.25rem;
+    left: 1.5rem;
 }
 
 .right {
-    right: -1.25rem;
+    right: 1.5rem;
 }
 
-@keyframes fadeSlide {
-    from {
-        opacity: 0;
-        transform: translateX(0%);
-    }
-
-    to {
-        opacity: 1;
-        transform: translateX(100%);
-    }
-}
 
 
 .leadership-section {
+    padding-bottom: 5rem !important;
+
     .leadership-title {
         font-size: 1.75rem;
         font-weight: 700;
@@ -152,8 +145,8 @@
     transition: transform 0.3s ease;
 }
 
-.arrow:hover {
-    transform: scale(1.1);
+.dotList {
+    bottom: 2.5rem !important;
 }
 
 .dot {
@@ -170,24 +163,28 @@
 }
 
 @media (max-width: 768px) {
-    .slide{
+    .slide {
         padding: 1rem 1.25rem;
     }
-    .icon{
-        width:  3rem;
+
+    .icon {
+        width: 3rem;
         height: 3rem;
     }
-    .card-content{
+
+    .card-content {
         width: calc(100% - 3rem - 0.5rem);
+
         h2 {
             font-size: 1.5rem;
         }
-    
+
         h4 {
             font-size: 1rem;
         }
     }
-    .description{
+
+    .description {
         min-height: 250px;
     }
 
